--- a/newapp/templates/results.html
+++ b/newapp/templates/results.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="result-item">
                         <h5 class="mb-3">Score:</h5>
-                        <p>{{ score }}%</p>
+                        <p>{{ percentage_score }}%</p>
                     </div>
                     <div class="text-center mt-4">
                         <a href="{% url 'home' %}" class="btn btn-primary">Back to Home</a>
