--- a/newapp/templates/give_test.html
+++ b/newapp/templates/give_test.html
@@ -15,7 +15,7 @@
                 var totalQuestionsCount = {{ total_questions }}
             </script>
                 
-                <h5 class="quizh2">Question {{q.id}}: {{q.question}}</h5>
+                <h5 class="quizh2">Question {{q.question_number}}: {{q.question}}</h5>
                 <div class="form-check" onclick="toggleCheckbox(this)">
                     <button type="button" class="btn btn-outline-light" >                    
                         <input class="form-check-input quizh2" type="radio" name="q{{ q.id }}" value="option1" id="q{{ q.id }}_option1">
@@ -47,8 +47,6 @@
                 <br>
             
 
-                
-            
             {% endfor %}
 
             <button type="submit" class="btn btn-danger">Submit</button>
