--- a/newapp/templates/tests.html
+++ b/newapp/templates/tests.html
@@ -5,14 +5,28 @@
   <br>
   <a href="{% url 'add_question' %}"><button type="button" class="btn btn-danger">  Add questions</button></a>
 
+  <h2 id="h2">Choose the test you want to take.</h2>
 
 
 
   <section>
+    <form method="POST" action="{% url 'test_category_filter' %}">
+      {% csrf_token %}
+      <select name="selected_category" class="form-select" aria-label="Select Category">
+        <option value="">All Categories</option>
+        {% for categoryy in category %}
+          <option value="{{ categoryy.id }}">{{ categoryy.name }}</option>
+        {% endfor %}
+      </select>
+      <button type="submit" class="btn btn-primary">Filter</button>
+    </form>
+  </section>
+
+  <section>
     <h2 id="h2">Chose the test you want to take.</h2>
     <ul class="list-group">
-      {% for categoryy in category %}
-        <li class="list-group-item"><a href="{% url 'givetest' categoryy.id %}" class="text-decoration-none text-dark">{{ categoryy.name}}</a></li>
+      {% for tst in test %}
+        <li class="list-group-item"><a href="{% url 'givetest' tst.id %}" class="text-decoration-none text-dark">{{ tst.name}}</a></li>
       {% endfor %}
         <!-- Add more categories here -->
     </ul>
