--- a/newapp/templates/test_category_filter.html
+++ b/newapp/templates/test_category_filter.html
@@ -3,7 +3,16 @@
 <!-- Main content goes here -->
 {% block test %}
 <br>
-<a href="{% url 'add_question' %}"><button type="button" class="btn btn-danger">  Add questions</button></a>
+
+<div class="col-4">
+    <a href="{% url 'add_test' %}"><button type="button" class="btn btn-danger m-2">  Add Test</button></a>
+  
+    <a href="{% url 'add_category' %}"><button type="button" class="btn btn-danger m-2">  Add Category</button></a>
+  
+    
+    <a href="{% url 'add_question' %}"><button type="button" class="btn btn-danger m-2">  Add questions</button></a>
+  
+  </div>
 
 <h2 id="h2">Choose the test you want to take.</h2>
 
@@ -11,7 +20,7 @@
 <section>
 <form method="POST" action="{% url 'test_category_filter'  %}">
     {% csrf_token %}
-  <select name="category_id" class="form-select" aria-label="Select Category">
+  <select name="selected_category" class="form-select" aria-label="Select Category">
     <option value="">All Categories</option>
     {% for categoryy in all_category %}
       <option value="{{ categoryy.id }}">{{ categoryy.name }}</option>
