--- a/newapp/templates/tests.html
+++ b/newapp/templates/tests.html
@@ -3,9 +3,18 @@
   <!-- Main content goes here -->
   {% block test %}
   <br>
-  <a href="{% url 'add_question' %}"><button type="button" class="btn btn-danger">  Add questions</button></a>
+  
+<div class="col-4">
+  <a href="{% url 'add_test' %}"><button type="button" class="btn btn-danger m-2">  Add Test</button></a>
 
-  <h2 id="h2">Choose the test you want to take.</h2>
+  <a href="{% url 'add_category' %}"><button type="button" class="btn btn-danger m-2">  Add Category</button></a>
+
+  
+  <a href="{% url 'add_question' %}"><button type="button" class="btn btn-danger m-2">  Add questions</button></a>
+
+</div>
+
+  <h2 id="h2">Choose the Category you want to give test.</h2>
 
 
 
