--- a/newapp/templates/base.html
+++ b/newapp/templates/base.html
@@ -24,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/">Link</a>
+                <a class="nav-link" href="logout">LogOut</a>
               </li>
 
             </ul>
