--- a/newapp/templates/base.html
+++ b/newapp/templates/base.html
@@ -23,8 +23,8 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="logout">LogOut</a>
+              <a class="nav-link" href="{% url 'accounts:logout' %}">LogOut</a>
+
               </li>
 
             </ul>
