--- a/newapp/templates/results.html
+++ b/newapp/templates/results.html
@@ -27,7 +27,7 @@
                         <p>{{ percentage_score }}%</p>
                     </div>
                     <div class="text-center mt-4">
-                        <a href="{% url 'home' %}" class="btn btn-primary">Back to Home</a>
+                        <a href="{% url 'newapp:home' %}" class="btn btn-primary">Back to Home</a>
                     </div>
                 </div>
             </div>
